--- a/configure.in
+++ b/configure.in
@@ -1003,7 +1003,7 @@ else
   MOTIF_APS=""
   AC_MSG_RESULT(no uil so skipping openmotif apps.openmotif-devel not installed.)
 fi
-AC_PATH_PROG(JAVAC,javac,javac,$jdk_dir/bin)
+AC_PATH_PROG([JAVAC], [javac], [], [$jdk_dir/bin$PATH_SEPARATOR$PATH])
 AC_PATH_PROG(JAR,jar,jar,$jdk_dir/bin)
 AC_PATH_PROG(RMIC,rmic,rmic,$jdk_dir/bin)
 
@@ -1053,7 +1053,6 @@ AC_SUBST(IDL_LIB)
 AC_SUBST(IDLMDSEVENT)
 AC_SUBST(IDLMDSWIDGETS)
 AC_SUBST(JAR)
-AC_SUBST(JAVAC)
 AC_SUBST(JAVA_APS)
 AC_SUBST(JDK_CFLAGS)
 AC_SUBST(JDK_DIR)
