JAR and RMIC were being set wrong. When not found, the value should be blank.  Additionally, the path modified wasn't using PATH_SEPARATOR.  Also, AC_PATH_PROG already calls AC_SUBST, so remove the redundant call.

--- a/configure.in
+++ b/configure.in
@@ -1004,8 +1004,8 @@ else
   AC_MSG_RESULT(no uil so skipping openmotif apps.openmotif-devel not installed.)
 fi
 AC_PATH_PROG([JAVAC], [javac], [], [$jdk_dir/bin$PATH_SEPARATOR$PATH])
-AC_PATH_PROG(JAR,jar,jar,$jdk_dir/bin)
-AC_PATH_PROG(RMIC,rmic,rmic,$jdk_dir/bin)
+AC_PATH_PROG([JAR], [jar], [], [$jdk_dir/bin$PATH_SEPARATOR$PATH])
+AC_PATH_PROG([RMIC], [rmic], [], [$jdk_dir/bin$PATH_SEPARATOR$PATH])
 
 XM_LIBS="-lMrm -lXm"
 if test "$X_CFLAGS"
@@ -1052,7 +1052,6 @@ AC_SUBST(IDL_INC)
 AC_SUBST(IDL_LIB)
 AC_SUBST(IDLMDSEVENT)
 AC_SUBST(IDLMDSWIDGETS)
-AC_SUBST(JAR)
 AC_SUBST(JAVA_APS)
 AC_SUBST(JDK_CFLAGS)
 AC_SUBST(JDK_DIR)
@@ -1106,7 +1105,6 @@ AC_SUBST(NSLLIB)
 AC_SUBST(RANLIB)
 AC_SUBST(REMCAM)
 AC_SUBST(REMCAMLIB)
-AC_SUBST(RMIC)
 AC_SUBST(RTEVENTS)
 AC_SUBST(SHARETYPE)
 AC_SUBST(SHARETYPEJNI)
