--- a/configure.in
+++ b/configure.in
@@ -4,13 +4,13 @@ AC_INIT()
 
 #AC_CONFIG_HEADER(include/config.h)
 AC_CONFIG_AUX_DIR(conf)
-AC_CANONICAL_SYSTEM
+AC_CANONICAL_HOST
 AC_CHECK_SIZEOF(int *)
 SIZEOF_INT_P=$ac_cv_sizeof_int_p
 AC_CHECK_LIB(socket,socket,SOCKETLIB="-l socket",SOCKELIB="")
 AC_CHECK_LIB(nsl,inet_addr,NSLLIB="-l nsl",NSLLIB="")
 dnl See if we need to use native compilers
-AS_CASE(["$target"],
+AS_CASE(["$host"],
         [alpha-dec-osf*], [${CC=cc}; ${F77=f77}],
         [sparc-sun-solaris2*], [${CC=cc}])
 
@@ -72,7 +72,7 @@ AC_ARG_ENABLE([universal],
 
 dnl this new java section hoses macos x... why not use the autoconf java macros?
 dnl I'm faking a disable so I can enable by hand later...
-AS_CASE([$target_vendor],
+AS_CASE([$host_vendor],
         [apple], dnl the java section breaks with macos x due to different structure
                  dnl this disables it for now..  is there a AC_PROG_JAVA?
                  [AS_VAR_SET([enable_java], [no])]
@@ -277,7 +277,7 @@ RTEVENTS="rtevents"
 LIBPTHREAD=-lpthread
 IS_HP=0
 MITDEVICESIO_TARGETS=""
-case "$target" in
+case "$host" in
 hppa*) CFLAGS="$CFLAGS -O0 -g -fpic -D_XOPEN_SOURCE_EXTENDED";
        FFLAGS="$FFLAGS -O0 -g -fpic  -Wno-globals -fno-backslash";
        D3D_FFLAGS="+U77 +E1 -K"; 
@@ -375,7 +375,7 @@ alpha*-dec-osf*) CFLAGS="$CFLAGS -pthread -ieee";
        LD="gcc"
        if ( uname -m | grep 64 > /dev/null ) 
        then
-         if ( echo $target | grep 64 > /dev/null )
+         if ( echo $host| grep 64 > /dev/null )
          then
            if [[ -d /usr/lib64 ]]
            then
@@ -939,7 +939,7 @@ AC_CHECK_FUNC(malloc)
 AC_CHECK_FUNC(sched_setscheduler)
 
 dnl Check for Sybase
-if test "$target_cpu" = "arm"
+if test "$host_cpu" = "arm"
 then
    SYBASE_INC=""
    SYBASE_LIB=""
@@ -1015,10 +1015,6 @@ else
 fi
 AC_CHECK_LIB(Xext,XextAddDisplay,LIBXEXT="-lXext",LIBXEXT="")
 AC_CHECK_LIB(Xp,XpGetDocumentData,LIBXP="-lXp",LIBXP="")
-
-AC_DEFINE_UNQUOTED(TARGET_OS,${target_os})
-AC_DEFINE_UNQUOTED(TARGET_CPU,${target_cpu})
-AC_DEFINE_UNQUOTED(TARGET_VENDOR,${target_vendor})
 
 LIBS="$LIBPTHREAD $LIBS"
 AC_SUBST(CAMSHR)
