--- a/mdsdcl/Makefile.in
+++ b/mdsdcl/Makefile.in
@@ -7,7 +7,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
-LIBS=@LIBS@ @GCCLIB@
+LIBS=@LIBS@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = 		\
