--- a/tdishr/Makefile.in
+++ b/tdishr/Makefile.in
@@ -7,7 +7,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
-LIBS=-L@MAKESHLIBDIR@  -lTreeShr -lMdsShr @LIBS@ @LIBM@ @GCCLIB@
+LIBS=-L@MAKESHLIBDIR@  -lTreeShr -lMdsShr @LIBS@ @LIBM@
 SYBASE_INC=@SYBASE_INC@
 
 INSTALL=@top_srcdir@/conf/install-sh -c
