Force a minimum versino of autoconf so that older versions aren't accidentally used

--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl @(#)$RCSfile$ $Revision$
+AC_PREREQ([2.63])
 AC_INIT()
 
 #AC_CONFIG_HEADER(include/config.h)
