--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl @(#)$RCSfile$ $Revision$
 AC_PREREQ([2.63])
-AC_INIT()
+AC_INIT([MDSplus], [6.0a], [mdsplus@lists.psfc.mit.edu])
 
 #AC_CONFIG_HEADER(include/config.h)
 AC_CONFIG_AUX_DIR(conf)
