Big change.  Factor out the common header in all makefiles to a single makefile in the top level.  This will pave the way for using automake in the future, as a lot of the low level plumbing is now hidden inside Makefile.inc.  There is a downside that top_srcdir has to be hacked, but that's tolerable for the time being.

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,9 +1,7 @@
 #@(#)$RCSfile$ $Revision$
 # @configure_input@
-prefix=@prefix@
-top_srcdir=@top_srcdir@
-exec_prefix=@exec_prefix@
-SHELL=/bin/sh
+
+include Makefile.inc
 
 JAVA_APS = javamds \
 	   javascope \
