--- a/javaclient/Makefile.in
+++ b/javaclient/Makefile.in
@@ -1,11 +1,6 @@
-SHELL=/bin/sh
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
+include @top_srcdir@/Makefile.inc
+
 JAVADIR = @MAKEJAVADIR@classes
-JAVAC = @JAVAC@
-JAR = @JAR@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = MdsPlusDescriptor.java\
