--- a/mdsobjects/labview/Makefile.in
+++ b/mdsobjects/labview/Makefile.in
@@ -1,17 +1,10 @@
-SHELL=/bin/sh
-CXX=@CXX@
-CC=@CC@
+include @top_srcdir@/Makefile.inc
+
 LD=@CXX@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
 CFLAGS=@CFLAGS@ @LV_INC@ -fPIC
 CXXFLAGS=-g -O2 -Wno-deprecated -fPIC @CFLAGS@ @LV_INC@
-LDFLAGS=@LDFLAGS@
 CLIBS=-L@MAKESHLIBDIR@ -lMdsShr @LIBS@
 CXXLIBS=-L@MAKESHLIBDIR@ -lMdsShr -lTreeShr -lTdiShr -lRtEventsShr -lMdsIpShr -lMdsObjectsCppShr -lLV @LIBS@ 
-INSTALL=@top_srcdir@/conf/install-sh -c
 
 CSOURCES = lv.c
 
