--- a/rpm/Makefile.in
+++ b/rpm/Makefile.in
@@ -1,13 +1,7 @@
-SHELL=/bin/sh
-top_srcdir=@top_srcdir@
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-INSTALL=@top_srcdir@/conf/install-sh -c
-
+include @top_srcdir@/Makefile.inc
 
 all : 
 	:
-      
 
 depend:
 	:
