--- a/actions/Makefile.in
+++ b/actions/Makefile.in
@@ -1,12 +1,7 @@
-SHELL=/bin/sh
-CC=@CC@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
+include @top_srcdir@/Makefile.inc
+
 X_CFLAGS=@X_CFLAGS@
 CFLAGS=@CFLAGS@ @CC_LDFLAGS@ $(X_CFLAGS)
-LDFLAGS=@LDFLAGS@
 LIBS=@LIBS@
 UIL=@UIL@
 X_LIBS=@X_LIBS@
