--- a/cacheshr/Makefile.in
+++ b/cacheshr/Makefile.in
@@ -1,14 +1,7 @@
-SHELL=/bin/sh
-CXX=@CXX@
-CC=@CC@
-LD=@CXX@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
+include @top_srcdir@/Makefile.inc
+
 CFLAGS=@CFLAGS@ @SRBINCLUDE@  -fPIC
 CXXFLAGS=-g -O2 -fPIC -I../rtevents @CFLAGS@
-LDFLAGS=@LDFLAGS@
 LIBS=-L@MAKESHLIBDIR@ -lMdsShr -lTreeShr -lTdiShr @LIBS@ @SRBLIB@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
