--- a/camshr/Makefile.in
+++ b/camshr/Makefile.in
@@ -1,12 +1,5 @@
-SHELL=/bin/sh
-CC=@CC@
-LD=@LD@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-CFLAGS=@CFLAGS@
-LDFLAGS=@LDFLAGS@
+include @top_srcdir@/Makefile.inc
+
 LIBS=-L@MAKESHLIBDIR@ -lMdsShr @LIBS@
 INSTALL=@top_srcdir@/conf/install-sh -c
 LIBRARYNAME=CamShr
