--- a/cdu/Makefile.in
+++ b/cdu/Makefile.in
@@ -1,13 +1,5 @@
-SHELL=/bin/sh
-CC=@CC@
-LD=@LD@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-CFLAGS=@CFLAGS@
-LDFLAGS=@LDFLAGS@
-LIBS=@LIBS@
+include @top_srcdir@/Makefile.inc
+
 INSTALL=@top_srcdir@/conf/install-sh -c
 
 LIB_SOURCES =		\
