--- a/d3dshr/Makefile.in
+++ b/d3dshr/Makefile.in
@@ -1,14 +1,7 @@
-SHELL=/bin/sh
-FC=@F77@
-LD=@LD@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
+include @top_srcdir@/Makefile.inc
+
 FFLAGS=@FFLAGS@ @D3D_FFLAGS@
 D3DLIB=@D3DLIB@
-LDFLAGS=@LDFLAGS@
-LIBS=@LIBS@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = mdsptdata.f
