--- a/dwscope/Makefile.in
+++ b/dwscope/Makefile.in
@@ -1,13 +1,7 @@
-SHELL=/bin/sh
-CC=@CC@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
+include @top_srcdir@/Makefile.inc
+
 X_CFLAGS=@X_CFLAGS@
 CFLAGS=@CFLAGS@ $(X_CFLAGS)
-LDFLAGS=@LDFLAGS@
-LIBS=@LIBS@
 UIL=@UIL@ -I$(top_srcdir)/include
 X_LIBS=@X_LIBS@
 X_EXTRA_LIBS=@X_EXTRA_LIBS@
