--- a/gen_device/Makefile.in
+++ b/gen_device/Makefile.in
@@ -1,12 +1,6 @@
-SHELL=/bin/sh
-CC=@CC@
-LD=@LD@
-prefix=@prefix@
-top_srcdir=@top_srcdir@
-exec_prefix=@exec_prefix@
-RM=$(top_srcdir)/devscripts/rm_if
+include @top_srcdir@/Makefile.inc
+
 CFLAGS=@CFLAGS@ @GLOBUS_CFLAGS@
-LDFLAGS=@LDFLAGS@
 EXE_LIBS=-L@MAKESHLIBDIR@ -lTdiShr -lTreeShr -lMdsShr @LIBS@
 LIB_LIBS=-L@MAKESHLIBDIR@ -lTdiShr -lTreeShr -lMdsShr @LIBS@ 
 INSTALL=@top_srcdir@/conf/install-sh -c
