--- a/idlmdsevent/Makefile.in
+++ b/idlmdsevent/Makefile.in
@@ -1,10 +1,5 @@
-SHELL=/bin/sh
-CC=@CC@
-LD=@LD@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
+include @top_srcdir@/Makefile.inc
+
 CFLAGS=@CFLAGS@ @IDL_INC@ @X_CFLAGS@
 LDFLAGS=@LDFLAGS@ @IDL_LIB@
 X_LIBS=@X_LIBS@
