--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -1,11 +1,7 @@
-SHELL=/bin/sh
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
+include @top_srcdir@/Makefile.inc
+
 JAVADIR = @MAKEJAVADIR@classes
 JAVAC = @JAVAC@  -classpath ../java/classes/jScope.jar:../java/classes/jTraverser.jar:.
-JAR = @JAR@
 
 RMIC = @RMIC@
 INSTALL=@top_srcdir@/conf/install-sh -c
