--- a/javadispatcher/Makefile.in
+++ b/javadispatcher/Makefile.in
@@ -1,11 +1,7 @@
-SHELL=/bin/sh
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
+include @top_srcdir@/Makefile.inc
+
 JAVADIR = @MAKEJAVADIR@classes
 JAVAC = @JAVAC@ -classpath .:../java/classes/jScope.jar:../java/classes/jTraverser.jar
-JAR = @JAR@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = Action.java   MdsHelper.java          MdsServerEvent.java     NetworkListener.java    jDispatcher.java \
