--- a/javamds/Makefile.in
+++ b/javamds/Makefile.in
@@ -1,13 +1,6 @@
-SHELL=/bin/sh
-CC=@CC@
-LD=@LD@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
+include @top_srcdir@/Makefile.inc
+
 CFLAGS=@CFLAGS@ @JDK_CFLAGS@
-LDFLAGS=@LDFLAGS@
-LIBS=@LIBS@
 INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = javamds.c ServerSupport.c JavaData.c JavaTrav.c mdsobjects.c
