--- a/math/Makefile.in
+++ b/math/Makefile.in
@@ -1,15 +1,7 @@
-SHELL=/bin/sh
-CC=@CC@
+include @top_srcdir@/Makefile.inc
+
 LD=@FORLD@
-prefix=@prefix@
-top_srcdir=@top_srcdir@
-exec_prefix=@exec_prefix@
-RM=$(top_srcdir)/devscripts/rm_if
-CFLAGS=@CFLAGS@
-LDFLAGS=@LDFLAGS@
 INSTALL=@top_srcdir@/conf/install-sh -c
-FC=@F77@
-FFLAGS=@FFLAGS@
 LIBS=@LIBS@ @LIBM@
 
 SOURCES = \
