--- a/mdsobjects/cpp/Makefile.in
+++ b/mdsobjects/cpp/Makefile.in
@@ -1,16 +1,8 @@
-SHELL=/bin/sh
-CXX=@CXX@
-CC=@CC@
-LD=@CXX@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
+include @top_srcdir@/Makefile.inc
+
 CFLAGS=@CFLAGS@ @SRBINCLUDE@ -fPIC -I../../tdishr
 CXXFLAGS=-g -O2 -Wno-deprecated -fPIC @CFLAGS@
-LDFLAGS=@LDFLAGS@
 LIBS=-L@MAKESHLIBDIR@ -lMdsShr -lTreeShr -lTdiShr -lRtEventsShr -lMdsIpShr @LIBS@ @SRBLIB@
-INSTALL=@top_srcdir@/conf/install-sh -c
 
 CXXSOURCES = \
 	mdsdataobjects.cpp mdstreeobjects.cpp mdsipobjects.cpp mdseventobjects.cpp
