--- a/mdsshr/Makefile.in
+++ b/mdsshr/Makefile.in
@@ -1,14 +1,7 @@
-SHELL=/bin/sh
-CC=@CC@
-LD=@LD@
-prefix=@prefix@
-top_srcdir=@top_srcdir@
-exec_prefix=@exec_prefix@
-RM=$(top_srcdir)/devscripts/rm_if
+include @top_srcdir@/Makefile.inc
+
 CFLAGS=@CFLAGS@ @GLOBUS_CFLAGS@
-LDFLAGS=@LDFLAGS@
 LIBS=@LIBS@ @LIBDL@ @SOCKETLIB@ @NSLLIB@
-INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = \
         librtl.c \
