--- a/mitdevices/Makefile.in
+++ b/mitdevices/Makefile.in
@@ -1,18 +1,11 @@
-SHELL=/bin/sh
-CC=@CC@
-LD=@LD@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
+include @top_srcdir@/Makefile.inc
+
 X_CFLAGS=@X_CFLAGS@
 CFLAGS=@CFLAGS@ $(X_CFLAGS)
-LDFLAGS=@LDFLAGS@
 LIBS=@LIBS@ @LIBM@
 X_LIBS=@X_LIBS@
 X_EXTRA_LIBS=@X_EXTRA_LIBS@
 X_PRE_LIBS=@X_PRE_LIBS@
-INSTALL=@top_srcdir@/conf/install-sh -c
 MOTIF_LIBS = @MOTIF_LD_LDARC@ @XM_LIBS@ @MOTIF_LD_LDSHARE@ @LIBXP@ @LIBXEXT@
 UIL=@UIL@ -I$(top_srcdir)/include
 MATH_LIBS=-L@MAKESHLIBDIR@ -lMdsMath
@@ -802,12 +795,12 @@ dc1394_support2.o : dc1394_support2.c
 
 @MAKESHLIBDIR@acq_root_filesystem.tgz : $(DTACQ_FILESYSTEM)
 	echo $(DC) > acq_root_filesystem/ffs/user/MitFilesDate  
-	( cd acq_root_filesystem;  tar  --exclude=ffs -cvzf ../$@  . ; tar -cvzf ../$(@)_ffs ffs/user )
+	( cd acq_root_filesystem;  tar  --exclude=ffs -cvzf $@  . ; tar -cvzf $@_ffs ffs/user )
 
 
 @MAKESHLIBDIR@acq_root_filesystem.tgz_ffs : $(DTACQ_FILESYSTEM)
 	echo $(DC) > acq_root_filesystem/ffs/user/MitFilesDate
-	( cd acq_root_filesystem;  tar -cvzf ../$(@) ffs/user )
+	( cd acq_root_filesystem;  tar -cvzf $@ ffs/user )
 
 @MAKEBINDIR@dtaq_update_board.sh : dtaq_update_board.sh
 	cp $< $@
