--- a/remcam/Makefile.in
+++ b/remcam/Makefile.in
@@ -1,14 +1,6 @@
-SHELL=/bin/sh
-CC=@CC@
-LD=@LD@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-CFLAGS=@CFLAGS@
-LDFLAGS=@LDFLAGS@
+include @top_srcdir@/Makefile.inc
+
 LIBS=@LIBS@ @MEMCHKLIB@
-INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = CamIosb.c CamMulti.c CamSingle.c
 OBJECTS = $(SOURCES:.c=.o)
