--- a/roam/Makefile.in
+++ b/roam/Makefile.in
@@ -1,12 +1,8 @@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-SHELL=/bin/sh
+include @top_srcdir@/Makefile.inc
+
 CFLAGS = @CFLAGS@ $$(pkg-config --cflags globus-xio globus-gridmap-callout-error) -I$(top_srcdir)/include
 LDFLAGS = @LDFLAGS@ $$(pkg-config --libs globus-xio globus-gridmap-callout-error) -L@MAKESHLIBDIR@ -lMdsShr -lTdiShr -lcurl -lc
 EXPORTS = mdsipshr.export
-INSTALL=@top_srcdir@/conf/install-sh -c
-prefix=@prefix@
-exec_prefix=@exec_prefix@
 
 ifeq "@SHARETYPEMOD@" "@SHARETYPE@"
 	modules =
