--- a/setevent/Makefile.in
+++ b/setevent/Makefile.in
@@ -1,13 +1,4 @@
-SHELL=/bin/sh
-CC=@CC@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-CFLAGS=@CFLAGS@
-LDFLAGS=@LDFLAGS@
-LIBS=@LIBS@
-INSTALL=@top_srcdir@/conf/install-sh -c
+include @top_srcdir@/Makefile.inc
 
 SOURCES = setevent.c
 OBJECTS = $(SOURCES:.c=.o)
