--- a/tdic/Makefile.in
+++ b/tdic/Makefile.in
@@ -1,15 +1,7 @@
-SHELL=/bin/sh
-CC=@CC@
-LD=@LD@
-prefix=@prefix@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-exec_prefix=@exec_prefix@
-CFLAGS=@CFLAGS@
-LDFLAGS=@LDFLAGS@
+include @top_srcdir@/Makefile.inc
+
 LIBS=@LIBS@ -L@MAKESHLIBDIR@ -lMdsIpShr -lTdiShr -lMdsShr -lTreeShr
 TDIC_LIBS= -ldl
-INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = \
         TdiShrExt.c
