--- a/tdishr/Makefile.in
+++ b/tdishr/Makefile.in
@@ -1,16 +1,7 @@
-SHELL=/bin/sh
-CC=@CC@
-LD=@LD@
-top_srcdir=@top_srcdir@
-RM=$(top_srcdir)/devscripts/rm_if
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-CFLAGS=@CFLAGS@
-LDFLAGS=@LDFLAGS@
+include @top_srcdir@/Makefile.inc
+
 LIBS=-L@MAKESHLIBDIR@  -lTreeShr -lMdsShr @LIBS@ @LIBM@
 SYBASE_INC=@SYBASE_INC@
-
-INSTALL=@top_srcdir@/conf/install-sh -c
 
 SOURCES = \
 CvtConvertFloat.c \
