--- a/configure.in
+++ b/configure.in
@@ -2,9 +2,10 @@ dnl Process this file with autoconf to produce a configure script.
 dnl @(#)$RCSfile$ $Revision$
 AC_PREREQ([2.63])
 AC_INIT([MDSplus], [6.0a], [mdsplus@lists.psfc.mit.edu])
+AC_CONFIG_AUX_DIR([conf])
+AM_INIT_AUTOMAKE([1.11.1 foreign subdir-objects])
 
 #AC_CONFIG_HEADER(include/config.h)
-AC_CONFIG_AUX_DIR(conf)
 AC_CANONICAL_HOST
 AC_CHECK_SIZEOF(int *)
 SIZEOF_INT_P=$ac_cv_sizeof_int_p
