--- a/configure.in
+++ b/configure.in
@@ -55,7 +55,7 @@ AC_ARG_ENABLE([perf],
               [],
               [AS_VAR_SET([enable_perf], [no])])
 AS_CASE([$enable_perf],
-        [yes], [AC_DEFINE(USE_PERF)])
+        [yes], [AC_DEFINE([USE_PERF], [], [Define if you want to collect performance statistics -- linux only])])
 AC_MSG_RESULT([$enable_perf])
 
 AC_MSG_CHECKING([whether to build the java components])
