--- a/Makefile.in
+++ b/Makefile.in
@@ -136,6 +136,7 @@ binaries :
 
 
 # Interdependent directories:
+actions: mdsshr tdishr treeshr xmdsshr
 ccl: cdu mdsshr mdsdcl
 tcl: cdu mdsshr treeshr tdishr mdstcpip servershr mdsdcl
 camshr: cdu mdsdcl
