--- a/mdsdcl/Makefile.in
+++ b/mdsdcl/Makefile.in
@@ -42,15 +42,19 @@ install:
 	$(INSTALL) -m 755  @MAKESHLIBDIR@libMdsdcl@SHARETYPE@ @libdir@
 	$(INSTALL) -m 755  @MAKEBINDIR@mdsdcl	@bindir@
 
+cdudir = ../cdu
+LINK_CDU = $(cdudir)/libCdu.a
+CDU = $(cdudir)/cdu
+
 mdsdcl_tables.c:	mdsdcl_tables.ocld
-	env @LIBPATH@=@MAKESHLIBDIR@ @MAKEBINDIR@cdu < mdsdcl_tables.ocld
+	env @LIBPATH@=@MAKESHLIBDIR@ $(CDU) < mdsdcl_tables.ocld
 
 @MAKELIBDIR@libMdsdcl.a:	$(OBJECTS)
 		$(AR) -cr $@ $(OBJECTS)
 		@RANLIB@ $@
 
 @MAKESHLIBDIR@libMdsdcl@SHARETYPE@:	$(OBJECTS)
-	$(LD)  -o $@ @LINKSHARED@ $(OBJECTS) -L@MAKELIBDIR@ -lCdu -L@MAKESHLIBDIR@ -lMdsShr  $(LIBS) $(LDFLAGS)
+	$(LD)  -o $@ @LINKSHARED@ $(OBJECTS) $(LINK_CDU) -L@MAKESHLIBDIR@ -lMdsShr  $(LIBS) $(LDFLAGS)
 
 @MAKEBINDIR@mdsdcl:	mdsdcl.o
-	$(CC) $(CFLAGS) @CC_LDFLAGS@ -o $@ mdsdcl.o -L@MAKESHLIBDIR@ -lMdsdcl -lMdsShr -L@MAKELIBDIR@ -lCdu
+	$(CC) $(CFLAGS) @CC_LDFLAGS@ -o $@ mdsdcl.o -L@MAKESHLIBDIR@ -lMdsdcl -lMdsShr -L@MAKELIBDIR@ $(LINK_CDU)
