--- a/xmdsshr/Makefile.in
+++ b/xmdsshr/Makefile.in
@@ -2,7 +2,6 @@ include @top_srcdir@/Makefile.inc
 
 X_CFLAGS=@X_CFLAGS@
 CFLAGS=@CFLAGS@ $(X_CFLAGS)
-LIBS=@LIBS@ @LIBM@
 UIL=@UIL@
 X_LIBS=@X_LIBS@
 X_EXTRA_LIBS=@X_EXTRA_LIBS@
@@ -103,7 +102,7 @@ install:
 
 @MAKESHLIBDIR@libXmdsShr@SHARETYPE@ : $(OBJECTS)
 	- $(LD) -o $@ @LINKSHARED@ $(OBJECTS) \
-           -L@MAKESHLIBDIR@ -lMdsShr -lTdiShr -lTreeShr $(X_LIBS) $(MOTIF_LIBS) $(X_PRE_LIBS) -lXt -lX11 $(X_EXTRA_LIBS) $(LIBS) $(LDFLAGS)
+           -L@MAKESHLIBDIR@ -lMdsShr -lTdiShr -lTreeShr $(X_LIBS) $(MOTIF_LIBS) $(X_PRE_LIBS) -lXt -lX11 $(X_EXTRA_LIBS) -lm
 
 @MAKELIBDIR@libXmdsShr.a : $(OBJECTS)
 	$(AR) -cr $@ $(OBJECTS)
