--- a/configure.in
+++ b/configure.in
@@ -86,23 +86,20 @@ AC_ARG_WITH([jdk],
             [AS_HELP_STRING([--with-jdk=JDKDIR],
                             [specify location of java jdk])],
             [],
-            [AS_VAR_SET([with_jdk], [no])])
+            [AS_VAR_SET_IF([JDK_DIR],
+                           [AS_VAR_SET([with_jdk], [$JDK_DIR])],
+                           [AS_VAR_SET([with_jdk], [/etc/alternatives/java_sdk])])])
 
 AS_CASE([$enable_java],
         [yes], [AC_MSG_CHECKING([for presence of Java Development Kit])
-                AS_CASE([$with_jdk],
-                        [no], [AC_MSG_RESULT([none specified])],
-                        [yes], [AS_VAR_IF([JDK_DIR], [],
-                                          [AS_VAR_SET([JDK_DIR], [/etc/alternatives/java_sdk])])],
-                        [AS_VAR_SET([JDK_DIR], [$with_jdk])])
-                AS_IF([test -r $JDK_DIR/jre], [AC_MSG_RESULT([$JDK_DIR])],
+                AS_IF([test ! -d $with_jdk/jre],
                       [AC_MSG_RESULT([not found])
                        AC_MSG_WARN([YOU NEED TO SPECIFY THE JAVA JDK DIRECTORY OR DISABLE JAVA])
                        AC_MSG_WARN([The jdk directory can be specified by either defining a JDK_DIR environment])
                        AC_MSG_WARN([variable or by using the --with-jdk=DIR option.])
                        AC_MSG_WARN([You can disable java by using the --disable-java option.])
                        AS_EXIT])
-                AC_MSG_RESULT([$JDK_DIR])])
+                       AC_MSG_RESULT([$with_jdk])])
 
 AC_MSG_CHECKING([for use of globus for mdsip])
 AC_ARG_WITH([xio],
