Use rpath-link to work around staging issues in the transient build system

--- a/wfevent/Makefile.am
+++ b/wfevent/Makefile.am
@@ -1,8 +1,12 @@
 bindir = @MAKEBINDIR@
 bin_PROGRAMS = wfevent
 
+libdir=@MAKESHLIBDIR@
+
 wfevent_SOURCES = wfevent.c
-wfevent_LDADD = -L@MAKESHLIBDIR@ -lTdiShr -lMdsShr
+wfevent_LDADD = -L$(libdir) -lTdiShr -lMdsShr
+#FIXME: Use rpath-link until build system is flattened
+wfevent_LDFLAGS = -Wl,-rpath-link=$(libdir)
 
 #FIXME: Clean up LIBS in top level configure
 LIBS=
