--- a/configure.in
+++ b/configure.in
@@ -171,7 +171,7 @@ AC_ARG_WITH([labview],
 AS_CASE([$with_labview],
         [no], [],
         [yes], [AC_MSG_ERROR([Labview location required])],
-        [LV_INC="-I$LV_DIR/cintools"
+        [LV_INC="-I$with_labview/cintools"
          LV="mdsobjects/labview"
          LV_LIB="-lLV"])
 AC_MSG_RESULT([$with_labview])
